apps/production/podinfo-mesh/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: pfsense-ca-issuer
  name: podinfo
  namespace: podinfo-mesh
spec:
  ingressClassName: kong
  rules:
    - host: podinfo.mesh.lab.okd.local
      http:
        paths:
          - backend:
              service:
                name: podinfo
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - podinfo.mesh.lab.okd.local
      secretName: podinfo-mesh-ingress-tls
